force-app/main/default/objects/Form_Field__c/fields/Apex_Query__c.field-meta.xml
<CustomField>
    <fullName>Apex_Query__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apex Query</label>
    <type>Checkbox</type>
</CustomField>