force-app/main/default/objects/Form_Field__c/fields/File_Count__c.field-meta.xml
<CustomField>
    <fullName>File_Count__c</fullName>
    <label>File Count</label>
    <length>12</length>
    <type>Text</type>
</CustomField>