force-app/main/default/objects/Form_Field__c/fields/Form_Type__c.field-meta.xml
<CustomField>
    <fullName>Form_Type__c</fullName>
    <label>Form Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>