force-app/main/default/objects/Form_Field__c/fields/Future_Date__c.field-meta.xml
<CustomField>
    <fullName>Future_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Future Date</label>
    <type>Checkbox</type>
</CustomField>