force-app/main/default/objects/Form_Field__c/fields/Past_Date__c.field-meta.xml
<CustomField>
    <fullName>Past_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Past Date</label>
    <type>Checkbox</type>
</CustomField>