force-app/main/default/objects/Form_Field__c/fields/Prepopulate__c.field-meta.xml
<CustomField>
    <fullName>Prepopulate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prepopulate</label>
    <type>Checkbox</type>
</CustomField>