force-app/main/default/objects/Form_Field__c/fields/Query_field__c.field-meta.xml
<CustomField>
    <fullName>Query_field__c</fullName>
    <label>Query field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>