force-app/main/default/objects/Form_Field__c/fields/Query_Limit__c.field-meta.xml
<CustomField>
    <fullName>Query_Limit__c</fullName>
    <label>Query Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>