force-app/main/default/objects/Form_Field__c/fields/Query_Table__c.field-meta.xml
<CustomField>
    <fullName>Query_Table__c</fullName>
    <label>Query Table</label>
    <length>255</length>
    <type>Text</type>
</CustomField>