force-app/main/default/objects/Form_Field__c/fields/Self_Query__c.field-meta.xml
<CustomField>
    <fullName>Self_Query__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Self Query</label>
    <type>Checkbox</type>
</CustomField>