force-app/main/default/objects/Form_Field__c/fields/Where_Clause__c.field-meta.xml
<CustomField>
    <fullName>Where_Clause__c</fullName>
    <label>Where Clause</label>
    <type>TextArea</type>
</CustomField>