force-app/main/default/objects/Form_Field__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case_Type__c</columns>
    <columns>Controlling_Field__c</columns>
    <columns>Label__c</columns>
    <columns>Sequence__c</columns>
    <columns>Visible__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Case_Type__c</field>
        <operation>equals</operation>
        <value>Asset Transfer Request</value>
    </filters>
    <filters>
        <field>Visible__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All</label>
</ListView>